--- a/pom.xml
+++ b/pom.xml
@@ -31,13 +31,15 @@
 	</repositories>
 
 	<dependencies>
+
+		<!-- for Test -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
-
+		
 		<!-- Java Simple Plugin Framework -->
 		<dependency>
 			<groupId>jspf</groupId>
@@ -52,12 +54,6 @@
 			<version>1.1</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.json</groupId>
-			<artifactId>json</artifactId>
-			<version>20140107</version>
-		</dependency>
-
 		<!-- Apache Commons Lang -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -65,17 +61,27 @@
 			<version>3.1</version>
 		</dependency>
 
+		<!-- to create and update -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20140107</version>
+		</dependency>
+
+		<!-- jersey core -->
+		<dependency>
+			<groupId>org.glassfish.jersey.core</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>2.13</version>
+		</dependency>
+		
+		<!-- jersey for jackson -->
 		<dependency>
 			<groupId>org.glassfish.jersey.media</groupId>
 			<artifactId>jersey-media-json-jackson</artifactId>
-			<version>2.5</version>
+			<version>2.13</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.apache.cxf</groupId>
-			<artifactId>cxf-rt-rs-client</artifactId>
-			<version>3.0.0-milestone1</version>
-		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
